Header: fix background position on small screen

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,7 +6,7 @@ header {
   background-color: #69bffc;
   background-image: url(./img/banner.png);
   background-size: contain;
-  background-position: center;
+  background-position: center bottom;
   background-repeat: no-repeat;
 }
 
